2008-05-20  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/emf.trm (EMF_dashtype):  Don't ignore linetype LT_AXIS.

2008-05-20  Ethan A Merritt  <merritt@u.washington.edu>
	
	* src/misc.c (parse_fillstyle):  Accept variables for fill density and
	border line type.

	* src/plot2d.c (eval_plots): Accept full keyword "fillstyle".

	* src/graphics.c (plot_boxes): Restore missing test for no fill border.

2008-05-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (plot_option_binary df_show_binary df_show_datasizes)
	src/show.c (show_datafile) docs/gnuplot.doc:
	Clean up option handling for binary data files by using the standard
	option lookup routines. Add missing entry points to the documentation
	for binary data options. Simplify default output of "show datafile".
	"show datafile binary" will dump full list of options.

	* src/scanner.c (get_num):  Add back previous test for truncation
	of long to int on 64-bit machines.

2008-05-17  Philipp K Janert  <janert@ieee.org>
	
	* src/graph3d.h src/plot3d.c src/plot3d.h src/save.c src/set.c
	src/show.c src/unset.c docs/gnuplot.doc
	Adding new smoothing kernels to the dgrid3d logic.

	* src/gp_types.h src/interpol.c src/plot2d.c src/tables.c
	docs/gnuplot.doc
	New smoothing algorithm: 'smooth cumulative', which plots a
	cumulative distribution function of a random collection of points.

2008-05-17  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/wgnuplib.h src/win/wgraph.c src/win/winmain.c term/win.trm:
	Allow 'set term win ... title "foo"' to change the title displayed for
	the plot window.

2008-05-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/scanner.c (get_num):  Parse integer constants on the command line
	using strtol() rather than atol().  This allows catching overflows and
	has the side benefit of handling hexadecimal and octal constants.
	Fixes bug from mouse+zoom with very large coordinate values.

2008-05-13  Ethan A Merritt  <merritt@u.washington.edu>
